--- a/src/component/form-controls/common.module.scss
+++ b/src/component/form-controls/common.module.scss
@@ -27,7 +27,7 @@
     width: 100%;
     font-size: 16px;
     padding: 10px 10px;
-    line-height: (18 / 16);
+    line-height: 1.125; // (18 / 16)
     border: 1px solid #ccc;
   }
 
