--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -33,6 +33,8 @@
 
 .btn {
   margin: 20px 0;
+  display: flex;
+  justify-content: center;
 }
 
 .fieldset {
@@ -62,8 +64,9 @@
   white-space: revert; // for Safari
 }
 
-.output {
-
+.note {
+  font-size: 12px;
+  color: #777;
 }
 
 @media screen and (min-width: 700px) {
