:zap: Add footer

--- a/src/common.scss
+++ b/src/common.scss
@@ -19,6 +19,12 @@ main {
   padding: 14px 10px 20px 5px;
 }
 
+footer {
+  padding: 20px 10px 20px 5px;
+  text-align: center;
+  font-size: 14px;
+}
+
 h1 {
   font-size: 16px;
 }
@@ -54,6 +60,10 @@ a {
 
   main {
     padding: 14px 20px 20px 15px;
+  }
+
+  footer {
+    padding: 20px 20px 20px 15px;
   }
 
   button {
